# chess-trainer

./: .gitignore  Cargo.toml
src/: accumulator.rs  dataloader.rs  main.rs  matrix.rs  network.rs  quantize.rs  utils.rs  vector.rs
